docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2223,6 +2223,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "joncursi",
+      "name": "Jon Cursi",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/4974609?v=4",
+      "profile": "https://joncursi.com/",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
