docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2261,6 +2261,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "ikc89",
+      "name": "İsmail Kerim Cem",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/7846803?v=4",
+      "profile": "https://github.com/ikc89",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
