--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2270,6 +2270,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "eberhardtj",
+      "name": "Joanne",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/49472730?v=4",
+      "profile": "https://github.com/eberhardtj",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
