--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-icons": "^3.11.0",
     "react-instantsearch-dom": "^6.6.0",
     "react-select": "^3.1.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "github-slugger": "^1.3.0",
