--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2288,6 +2288,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "gumb0",
+      "name": "Andrei Maiboroda",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1863135?v=4",
+      "profile": "https://github.com/gumb0",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
