--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2286,7 +2286,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/59159320?v=4",
       "profile": "https://github.com/michael60634",
       "contributions": [
-        "bug"
+        "bug",
+        "ideas"
       ]
     },
     {
