docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2298,6 +2298,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "ankisharmadel",
+      "name": "Anki",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/28820514?v=4",
+      "profile": "https://github.com/ankisharmadel",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
